# postpic

./: .buildinfo  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.html  CONTRIBUTING.md  MANIFEST.in  README.md  _Constants.py  __init__.py  __main__.py  _postpic_version.py  analyzer.py  doc-requirements.txt  feld.py  genindex.html  getstarted.html  index.html  introduction.html  objects.inv  pip-requirements.txt  pre-commit  py-modindex.html  pyproject.toml  run-tests  run-tests.py  sdfdatareader.py  sdfplots.py  search.html  searchindex.js  setup.cfg  setup.py  update-gh-pages-branch.sh
.github/: issue_template.md
.github/workflows/: pythonpackage.yml  run-tests.yml
_modules/: index.html
_modules/matplotlib/: colors.html  ticker.html
_modules/postpic/: datahandling.html  datareader.html  experimental.html  helper.html  io.html  plotting.html
_sources/: CHANGELOG.md.txt  CONTRIBUTING.md.txt
_sources/apidoc/: postpic.datareader.rst.txt  postpic.particles.rst.txt
_static/: documentation_options.js
apidoc/: modules.html  postpic.datareader.html  postpic.html  postpic.io.html  postpic.particles.html  postpic.plotting.html
conda/: README.rst  common.sh  create_environment.sh  do_tests_env.sh  make_envs.sh  pre-commit  run_tests.sh
doc/: Makefile  conf.py  dummyexample.py  getstarted.rst  index.rst  make.bat  updateapidoc.sh
doc/apidoc/: modules.rst  postpic.analyzer.rst  postpic.datareader.rst  postpic.plotting.rst  postpic.rst
doc/source/: conf.py  getstarted.rst  index.rst  introduction.rst
epochsdftools/: _Constants.py  _Interfaces.py  __main__.py  analyzer.py  feld.py  sdfdatareader.py
examples/: .gitignore  kspace-test-2d.py  openPMD.py  particleshapedemo.py  simpleexample.py  time_cythonfunctions.py
icons/logo/: svg_to_pdf
postpic/: __init__.py  _compat.py  _const.py  _field_calc.py  _postpic_version.py  _version.py  cythonfunctions.pyx  datahandling.py  experimental.py  helper.py  helper_fft.py  io.py  particles.py
postpic/_compat/: __init__.py  functions.py  mixins.py
postpic/analyzer/: __init__.py  analyzer.py  fields.py  particles.py
postpic/io/: __init__.py  (+5 more)
test/: test_analyzer.py  test_cythonfunctions.py  test_datahandling.py  test_dumpreader.py  test_field_calc.py  test_fields.py  test_helper.py  test_io.py  test_particles.py  test_particlestogrid.py
v1p0/: __init__.py
v1p1/: _Constants.py  _Interfaces.py  __init__.py  __main__.py  analyzer.py  feld.py  sdfdatareader.py  sdfplots.py
(+32 files in other folders)
