[build-system]
requires = ["setuptools", "wheel", "Cython>=0.18", "numpy>1.8", "versioneer[toml]"] #war ohne toml
build-backend = "setuptools.build_meta"

[project]
name = "postpic"
dynamic = ["version"]
license= {text =  "GPLv3+"}
description = "The open source particle-in-cell post processor."
readme = "README.md"
authors = [{ name = "Stephan Kuschel", email = "stephan.kuschel@gmail.de" }]
keywords = ['PIC', 'particle-in-cell', 'plasma', 'physics', 'plasma physics',
                  'laser', 'laser plasma', 'particle acceleration']
dependencies = [
    'matplotlib>=3.0', # ndarray.tobytes was introduced in np 1.9 and workaround in vtk routines
                        # does not work for python 2 war 1.3
    'matplotlib<=3.10; python_version=="3.10"',
    'numpy>=1.8', 
    'scipy>=1.6', 'scipy<=1.15;python_version=="3.10"',
    'scipy<=1.17;python_version<="3.11"',
    'future',
    'urllib3',
    'contourpy<= 1.3.1; python_version=="3.10"',
    'numexpr',
    'cython>=0.18',
    'packaging']

classifiers=[
          'Development Status :: 4 - Beta',
          'Intended Audience :: Science/Research',
          'Intended Audience :: Developers',
          'Topic :: Scientific/Engineering',
          'Topic :: Scientific/Engineering :: Astronomy',
          'Topic :: Scientific/Engineering :: Physics',
          'Topic :: Scientific/Engineering :: Visualization',
          'Programming Language :: Python',
          'Programming Language :: Python :: 3',
          'Programming Language :: Python :: 3.5',
          'Programming Language :: Python :: 3.6',
          'Operating System :: Unix',
          'Operating System :: MacOS',
          'Operating System :: Microsoft :: Windows',
          'Operating System :: POSIX',
          'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)']

[project.optional-dependencies]
h5_reader_openpmd = ['h5py']
sdf_support_epoch = ['sdf']
pypng_png_reading = ['pypng']
pillow_read_other_image_files = ['pillow']
phase_unwrapping_routines = ['scikit-image']
tqdm_particle_history = ['tqdm']

[project.urls]
Homepage = "https://github.com/skuschel/postpic"

[tool.setuptools.packages.find]
include = ["postpic*"]
namespaces = false

#[tool.setuptools]
#include-package-data = true


[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "postpic/_version.py"
versionfile_build = "postpic/_version.py"
tag_prefix = "v"